[tool.poetry]
name = "pypitowikidata"
version = "0.1.0"
description = "Quickly upload data from PyPI to Wikidata"
authors = ["Tomo <68489118+Tomodachi94@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
